almost all parts multilingual in admin in fine!

--- a/backend/src/data/projects.json
+++ b/backend/src/data/projects.json
@@ -1,85 +1,172 @@
-[
-  {
-    "title": "E-Commerce Dashboard",
-    "description": "A comprehensive admin dashboard for managing online stores with real-time analytics, inventory management, and order processing.",
-    "image": "/placeholder.svg?height=300&width=500",
-    "technologies": [
-      "React",
-      "Next.js",
-      "TypeScript",
-      "Tailwind CSS",
-      "Chart.js"
-    ],
-    "liveUrl": "#",
-    "githubUrl": "#"
-  },
-  {
-    "title": "Task Management App",
-    "description": "A collaborative project management tool with drag-and-drop functionality, real-time updates, and team collaboration features.",
-    "image": "/placeholder.svg?height=300&width=500",
-    "technologies": [
-      "React",
-      "Redux",
-      "Node.js",
-      "Socket.io",
-      "MongoDB"
-    ],
-    "liveUrl": "#",
-    "githubUrl": "#"
-  },
-  {
-    "title": "Weather Forecast App",
-    "description": "A beautiful weather application with location-based forecasts, interactive maps, and detailed weather analytics.",
-    "image": "/placeholder.svg?height=300&width=500",
-    "technologies": [
-      "React",
-      "TypeScript",
-      "OpenWeather API",
-      "Mapbox",
-      "Framer Motion"
-    ],
-    "liveUrl": "#",
-    "githubUrl": "#"
-  },
-  {
-    "title": "Portfolio Website",
-    "description": "A responsive portfolio website showcasing projects and skills with smooth animations and modern design principles.",
-    "image": "/placeholder.svg?height=300&width=500",
-    "technologies": [
-      "Next.js",
-      "Tailwind CSS",
-      "Framer Motion",
-      "MDX"
-    ],
-    "liveUrl": "#",
-    "githubUrl": "#"
-  },
-  {
-    "title": "Social Media Dashboard",
-    "description": "A unified dashboard for managing multiple social media accounts with analytics, scheduling, and engagement tracking.",
-    "image": "/placeholder.svg?height=300&width=500",
-    "technologies": [
-      "React",
-      "Next.js",
-      "Prisma",
-      "PostgreSQL",
-      "Recharts",
-      "Socket.io"
-    ],
-    "liveUrl": "#",
-    "githubUrl": "#"
-  },
-  {
-    "title": "Recipe Finder App ",
-    "description": "A recipe discovery app with advanced search filters, meal planning, and shopping list generation features.",
-    "image": "/placeholder.svg?height=300&width=500",
-    "technologies": [
-      "React",
-      "TypeScript",
-      "Spoonacular API",
-      "Local Storage"
-    ],
-    "liveUrl": "#",
-    "githubUrl": "#"
-  }
-]
+{
+  "en": [
+    {
+      "title": "E-Commerce Dashboard",
+      "description": "A comprehensive admin dashboard for managing online stores with real-time analytics, inventory management, and order processing.",
+      "image": "/placeholder.svg?height=300&width=500",
+      "technologies": [
+        "React",
+        "Next.js",
+        "TypeScript",
+        "Tailwind CSS",
+        "Chart.js"
+      ],
+      "liveUrl": "#",
+      "githubUrl": "#"
+    },
+    {
+      "title": "Task Management App",
+      "description": "A collaborative project management tool with drag-and-drop functionality, real-time updates, and team collaboration features.",
+      "image": "/placeholder.svg?height=300&width=500",
+      "technologies": [
+        "React",
+        "Redux",
+        "Node.js",
+        "Socket.io",
+        "MongoDB"
+      ],
+      "liveUrl": "#",
+      "githubUrl": "#"
+    },
+    {
+      "title": "Weather Forecast App",
+      "description": "A beautiful weather application with location-based forecasts, interactive maps, and detailed weather analytics.",
+      "image": "/placeholder.svg?height=300&width=500",
+      "technologies": [
+        "React",
+        "TypeScript",
+        "OpenWeather API",
+        "Mapbox",
+        "Framer Motion"
+      ],
+      "liveUrl": "#",
+      "githubUrl": "#"
+    },
+    {
+      "title": "Portfolio Website",
+      "description": "A responsive portfolio website showcasing projects and skills with smooth animations and modern design principles.",
+      "image": "/placeholder.svg?height=300&width=500",
+      "technologies": [
+        "Next.js",
+        "Tailwind CSS",
+        "Framer Motion",
+        "MDX"
+      ],
+      "liveUrl": "#",
+      "githubUrl": "#"
+    },
+    {
+      "title": "Social Media Dashboard",
+      "description": "A unified dashboard for managing multiple social media accounts with analytics, scheduling, and engagement tracking.",
+      "image": "/placeholder.svg?height=300&width=500",
+      "technologies": [
+        "React",
+        "Next.js",
+        "Prisma",
+        "PostgreSQL",
+        "Recharts",
+        "Socket.io"
+      ],
+      "liveUrl": "#",
+      "githubUrl": "#"
+    },
+    {
+      "title": "Recipe Finder App",
+      "description": "A recipe discovery app with advanced search filters, meal planning, and shopping list generation features.",
+      "image": "/placeholder.svg?height=300&width=500",
+      "technologies": [
+        "React",
+        "TypeScript",
+        "Spoonacular API",
+        "Local Storage"
+      ],
+      "liveUrl": "#",
+      "githubUrl": "#"
+    }
+  ],
+  "fa": [
+    {
+      "title": "داشبورد فروشگاه اینترنتی",
+      "description": "یک داشبورد مدیریتی کامل برای فروشگاه‌های آنلاین با تحلیل‌های لحظه‌ای، مدیریت موجودی و پردازش سفارش‌ها.",
+      "image": "/placeholder.svg?height=300&width=500",
+      "technologies": [
+        "ری‌اکت",
+        "نکست‌جی‌اس",
+        "تایپ‌اسکریپت",
+        "تیلویند CSS",
+        "چارت‌جی‌اس"
+      ],
+      "liveUrl": "#",
+      "githubUrl": "#"
+    },
+    {
+      "title": "اپلیکیشن مدیریت وظایف",
+      "description": "ابزاری برای مدیریت پروژه‌های گروهی با قابلیت کشیدن و رها کردن، به‌روزرسانی لحظه‌ای و امکانات همکاری تیمی.",
+      "image": "/placeholder.svg?height=300&width=500",
+      "technologies": [
+        "ری‌اکت",
+        "رداکس",
+        "نود.جی‌اس",
+        "ساکت.آی‌او",
+        "مانگو دی‌بی"
+      ],
+      "liveUrl": "#",
+      "githubUrl": "#"
+    },
+    {
+      "title": "اپلیکیشن پیش‌بینی آب‌وهوا",
+      "description": "یک برنامه جذاب آب‌وهوا با پیش‌بینی مکان‌محور، نقشه‌های تعاملی و تحلیل‌های دقیق جوی.",
+      "image": "/placeholder.svg?height=300&width=500",
+      "technologies": [
+        "ری‌اکت",
+        "تایپ‌اسکریپت",
+        "OpenWeather API",
+        "Mapbox",
+        "Framer Motion"
+      ],
+      "liveUrl": "#",
+      "githubUrl": "#"
+    },
+    {
+      "title": "وبسایت نمونه کار",
+      "description": "یک وبسایت واکنش‌گرا برای نمایش پروژه‌ها و مهارت‌ها با انیمیشن‌های نرم و طراحی مدرن.",
+      "image": "/placeholder.svg?height=300&width=500",
+      "technologies": [
+        "نکست‌جی‌اس",
+        "تیلویند CSS",
+        "Framer Motion",
+        "MDX"
+      ],
+      "liveUrl": "#",
+      "githubUrl": "#"
+    },
+    {
+      "title": "داشبورد شبکه‌های اجتماعی",
+      "description": "یک داشبورد یکپارچه برای مدیریت چند حساب شبکه اجتماعی با آنالیز، زمان‌بندی و پیگیری تعاملات.",
+      "image": "/placeholder.svg?height=300&width=500",
+      "technologies": [
+        "ری‌اکت",
+        "نکست‌جی‌اس",
+        "پریسما",
+        "پستگرس‌کیوال",
+        "Recharts",
+        "ساکت.آی‌او"
+      ],
+      "liveUrl": "#",
+      "githubUrl": "#"
+    },
+    {
+      "title": "اپلیکیشن جستجوی دستور پخت",
+      "description": "اپی برای کشف دستور پخت غذا با فیلترهای پیشرفته، برنامه‌ریزی وعده‌ها و تولید لیست خرید.",
+      "image": "/placeholder.svg?height=300&width=500",
+      "technologies": [
+        "ری‌اکت",
+        "تایپ‌اسکریپت",
+        "Spoonacular API",
+        "Local Storage"
+      ],
+      "liveUrl": "#",
+      "githubUrl": "#"
+    }
+  ]
+}
