some changes all around the project

--- a/backend/src/data/projects.json
+++ b/backend/src/data/projects.json
@@ -86,20 +86,6 @@
   ],
   "fa": [
     {
-      "title": "داشبورد فروشگاه اینترنتی",
-      "description": "یک داشبورد مدیریتی کامل برای فروشگاه‌های آنلاین با تحلیل‌های لحظه‌ای، مدیریت موجودی و پردازش سفارش‌ها.",
-      "image": "/placeholder.svg?height=300&width=500",
-      "technologies": [
-        "ری‌اکت",
-        "نکست‌جی‌اس",
-        "تایپ‌اسکریپت",
-        "تیلویند CSS",
-        "چارت‌جی‌اس"
-      ],
-      "liveUrl": "#",
-      "githubUrl": "#"
-    },
-    {
       "title": "اپلیکیشن مدیریت وظایف",
       "description": "ابزاری برای مدیریت پروژه‌های گروهی با قابلیت کشیدن و رها کردن، به‌روزرسانی لحظه‌ای و امکانات همکاری تیمی.",
       "image": "/placeholder.svg?height=300&width=500",
@@ -108,7 +94,10 @@
         "رداکس",
         "نود.جی‌اس",
         "ساکت.آی‌او",
-        "مانگو دی‌بی"
+        "Next.js",
+        "React",
+        "Express.js",
+        "React Query"
       ],
       "liveUrl": "#",
       "githubUrl": "#"
