--- a/frontend/package.json
+++ b/frontend/package.json
@@ -41,6 +41,7 @@
     "react-hot-toast": "^2.5.2",
     "react-i18next": "^15.6.1",
     "sonner": "^1.7.1",
+    "swiper": "^11.2.10",
     "swr": "^2.3.4",
     "tailwind-merge": "^2.6.0",
     "tailwindcss-animate": "^1.0.7",
