image upload ability added in backend

--- a/backend/src/data/projects.json
+++ b/backend/src/data/projects.json
@@ -88,7 +88,7 @@
     {
       "title": "اپلیکیشن مدیریت وظایف",
       "description": "ابزاری برای مدیریت پروژه‌های گروهی با قابلیت کشیدن و رها کردن، به‌روزرسانی لحظه‌ای و امکانات همکاری تیمی.",
-      "image": "/placeholder.svg?height=300&width=500",
+      "image": "/uploads/1754741460290-935133801.png",
       "technologies": [
         "ری‌اکت",
         "رداکس",
@@ -105,7 +105,7 @@
     {
       "title": "اپلیکیشن پیش‌بینی آب‌وهوا",
       "description": "یک برنامه جذاب آب‌وهوا با پیش‌بینی مکان‌محور، نقشه‌های تعاملی و تحلیل‌های دقیق جوی.",
-      "image": "/placeholder.svg?height=300&width=500",
+      "image": "/uploads/1754741708032-341858855.png",
       "technologies": [
         "ری‌اکت",
         "تایپ‌اسکریپت",
