--- a/frontend/package.json
+++ b/frontend/package.json
@@ -31,6 +31,8 @@
     "i18next-http-backend": "^3.0.2",
     "i18next-resources-to-backend": "^1.2.1",
     "input-otp": "1.4.1",
+    "jose": "^6.0.12",
+    "js-cookie": "^3.0.5",
     "lucide-react": "^0.454.0",
     "next": "15.2.4",
     "next-i18next": "^15.4.2",
@@ -48,6 +50,7 @@
     "zod": "^3.24.1"
   },
   "devDependencies": {
+    "@types/js-cookie": "^3.0.6",
     "@types/node": "^22",
     "@types/react": "^19",
     "@types/react-dom": "^19",
