--- a/backend/package.json
+++ b/backend/package.json
@@ -10,11 +10,13 @@
   "dependencies": {
     "cookie-parser": "^1.4.7",
     "cors": "^2.8.5",
+    "dotenv": "^17.2.1",
     "express": "^4.21.2",
     "i18next": "^25.3.2",
     "i18next-browser-languagedetector": "^8.2.0",
     "i18next-http-backend": "^3.0.2",
     "i18next-resources-to-backend": "^1.2.1",
+    "jsonwebtoken": "^9.0.2",
     "multer": "^2.0.2",
     "next-i18next": "^15.4.2",
     "react-i18next": "^15.6.1"
@@ -23,6 +25,7 @@
     "@types/cookie-parser": "^1.4.9",
     "@types/cors": "^2.8.19",
     "@types/express": "^5.0.3",
+    "@types/jsonwebtoken": "^9.0.10",
     "@types/multer": "^2.0.0",
     "@types/node": "^24.0.15",
     "nodemon": "^3.1.10",
