--- a/backend/src/data/projects.json
+++ b/backend/src/data/projects.json
@@ -1,6 +1,7 @@
 {
   "en": [
     {
+      "id": "p1",
       "title": "E-Commerce Dashboard",
       "description": "A comprehensive admin dashboard for managing online stores with real-time analytics, inventory management, and order processing.",
       "image": "",
@@ -15,6 +16,7 @@
       "githubUrl": "#"
     },
     {
+      "id": "p2",
       "title": "Task Management App",
       "description": "A collaborative project management tool with drag-and-drop functionality, real-time updates, and team collaboration features.",
       "image": "",
@@ -29,6 +31,7 @@
       "githubUrl": "#"
     },
     {
+      "id": "p3",
       "title": "Weather Forecast App",
       "description": "A beautiful weather application with location-based forecasts, interactive maps, and detailed weather analytics.",
       "image": "",
@@ -43,6 +46,7 @@
       "githubUrl": "#"
     },
     {
+      "id": "p4",
       "title": "Portfolio Website",
       "description": "A responsive portfolio website showcasing projects and skills with smooth animations and modern design principles.",
       "image": "",
@@ -56,6 +60,7 @@
       "githubUrl": "#"
     },
     {
+      "id": "p5",
       "title": "Social Media Dashboard",
       "description": "A unified dashboard for managing multiple social media accounts with analytics, scheduling, and engagement tracking.",
       "image": "",
@@ -71,6 +76,7 @@
       "githubUrl": "#"
     },
     {
+      "id": "p6",
       "title": "Recipe Finder App",
       "description": "A recipe discovery app with advanced search filters, meal planning, and shopping list generation features.",
       "image": "",
@@ -86,6 +92,22 @@
   ],
   "fa": [
     {
+      "id": "p1",
+      "title": "داشبورد فروشگاه اینترنتی",
+      "description": "یک داشبورد جامع برای مدیریت فروشگاه‌های آنلاین با تحلیل‌های لحظه‌ای، مدیریت موجودی و پردازش سفارش‌ها.",
+      "image": "",
+      "technologies": [
+        "ری‌اکت",
+        "نکست‌جی‌اس",
+        "تایپ‌اسکریپت",
+        "تیلویند CSS",
+        "Chart.js"
+      ],
+      "liveUrl": "#",
+      "githubUrl": "#"
+    },
+    {
+      "id": "p2",
       "title": "اپلیکیشن مدیریت وظایف",
       "description": "ابزاری برای مدیریت پروژه‌های گروهی با قابلیت کشیدن و رها کردن، به‌روزرسانی لحظه‌ای و امکانات همکاری تیمی.",
       "image": "",
@@ -103,6 +125,7 @@
       "githubUrl": "#"
     },
     {
+      "id": "p3",
       "title": "اپلیکیشن پیش‌بینی آب‌وهوا",
       "description": "یک برنامه جذاب آب‌وهوا با پیش‌بینی مکان‌محور، نقشه‌های تعاملی و تحلیل‌های دقیق جوی.",
       "image": "",
@@ -117,6 +140,7 @@
       "githubUrl": "#"
     },
     {
+      "id": "p4",
       "title": "وبسایت نمونه کار",
       "description": "یک وبسایت واکنش‌گرا برای نمایش پروژه‌ها و مهارت‌ها با انیمیشن‌های نرم و طراحی مدرن.",
       "image": "",
@@ -130,6 +154,7 @@
       "githubUrl": "#"
     },
     {
+      "id": "p5",
       "title": "داشبورد شبکه‌های اجتماعی",
       "description": "یک داشبورد یکپارچه برای مدیریت چند حساب شبکه اجتماعی با آنالیز، زمان‌بندی و پیگیری تعاملات.",
       "image": "",
@@ -145,6 +170,7 @@
       "githubUrl": "#"
     },
     {
+      "id": "p6",
       "title": "اپلیکیشن جستجوی دستور پخت",
       "description": "اپی برای کشف دستور پخت غذا با فیلترهای پیشرفته، برنامه‌ریزی وعده‌ها و تولید لیست خرید.",
       "image": "",
