--- a/frontend/package.json
+++ b/frontend/package.json
@@ -45,6 +45,7 @@
     "swr": "^2.3.4",
     "tailwind-merge": "^2.6.0",
     "tailwindcss-animate": "^1.0.7",
+    "uuid": "^11.1.0",
     "zod": "^3.24.1"
   },
   "devDependencies": {
