change some parts

--- a/backend/src/data/projects.json
+++ b/backend/src/data/projects.json
@@ -173,7 +173,7 @@
       "id": "p6",
       "title": "اپلیکیشن جستجوی دستور پخت",
       "description": "اپی برای کشف دستور پخت غذا با فیلترهای پیشرفته، برنامه‌ریزی وعده‌ها و تولید لیست خرید.",
-      "image": "",
+      "image": "test.jpg",
       "technologies": [
         "ری‌اکت",
         "تایپ‌اسکریپت",
