changes in ui of editors

--- a/backend/src/data/projects.json
+++ b/backend/src/data/projects.json
@@ -110,7 +110,7 @@
       "id": "p2",
       "title": "اپلیکیشن مدیریت وظایف",
       "description": "ابزاری برای مدیریت پروژه‌های گروهی با قابلیت کشیدن و رها کردن، به‌روزرسانی لحظه‌ای و امکانات همکاری تیمی.",
-      "image": "",
+      "image": "/uploads/1755072401795-240462962.png",
       "technologies": [
         "ری‌اکت",
         "رداکس",
@@ -173,7 +173,7 @@
       "id": "p6",
       "title": "اپلیکیشن جستجوی دستور پخت",
       "description": "اپی برای کشف دستور پخت غذا با فیلترهای پیشرفته، برنامه‌ریزی وعده‌ها و تولید لیست خرید.",
-      "image": "test.jpg",
+      "image": "",
       "technologies": [
         "ری‌اکت",
         "تایپ‌اسکریپت",
